--- a/app/src/main/res/layout/filter_store.xml
+++ b/app/src/main/res/layout/filter_store.xml
@@ -18,6 +18,7 @@
             android:focusable="auto"
             android:id="@+id/provId"
             android:filterTouchesWhenObscured="false"
+            android:theme="@style/NumberPickerText"
             android:solidColor="@color/white"
             android:descendantFocusability="blocksDescendants"
             android:background="@color/white"/>
