--- a/app/src/main/res/layout/filters_dilog1.xml
+++ b/app/src/main/res/layout/filters_dilog1.xml
@@ -19,6 +19,7 @@
             android:focusable="auto"
             android:id="@+id/filterPicker"
             android:tooltipText="20sp"
+            android:theme="@style/NumberPickerText"
             android:filterTouchesWhenObscured="false"
             android:solidColor="@color/white"
             android:descendantFocusability="blocksDescendants"
