--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
               android:layout_weight="1" android:background="#003939DB"/>
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNav"
-
+               android:layoutDirection="ltr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:menu="@menu/bottom_nav" android:layout_gravity="bottom">
