--- a/app/src/main/res/layout/car_card_favorite.xml
+++ b/app/src/main/res/layout/car_card_favorite.xml
@@ -2,24 +2,48 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
               android:layout_width="match_parent"
+              android:gravity="right"
+              android:layout_marginBottom="5dp"
               android:layout_height="wrap_content">
-    <FrameLayout android:layout_width="match_parent" android:layout_height="219dp">
+    <FrameLayout android:layout_width="match_parent" android:layout_height="221dp">
         <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
-                   android:src="@drawable/car" android:scaleType="centerCrop" android:id="@+id/carImage1"/>
+                   android:scaleType="fitXY" android:id="@+id/carImage"
+                   android:src="@drawable/car"
+                   android:cropToPadding="true"/>
         <LinearLayout android:layout_width="wrap_content" android:layout_marginTop="50dp"
                       android:background="@drawable/btn_car_price" android:layout_height="wrap_content"
-                      android:paddingLeft="5dp" android:paddingRight="5dp">
-            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:paddingLeft="7dp" android:paddingRight="7dp" android:orientation="horizontal"
+                         android:layout_gravity="left"
+                      android:layoutDirection="ltr"
+                      android:gravity="center">
+            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                       android:id="@+id/priceCar"
+                      android:layout_weight="1"
+
                       android:text="25,000" android:textColor="#000"
-                      android:padding="5dp" android:textSize="18sp" android:fontFamily="@font/font_bold"/>
+                      android:textSize="18sp" android:fontFamily="@font/font_bold"/>
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
 
                       android:text="$" android:textColor="#27AE60"
-                      android:padding="5dp" android:textSize="18sp" android:textStyle="bold"
-                      android:fontFamily="@font/font_bold"/>
+                      android:textSize="20sp" android:textStyle="bold"
+                      android:fontFamily="@font/font_bold" android:gravity="center" android:layout_marginLeft="3dp"/>
         </LinearLayout>
 
+        <LinearLayout android:layout_width="114dp" android:layout_marginTop="50dp"
+                      android:background="@drawable/revers" android:layout_height="wrap_content"
+                      android:paddingLeft="5dp" android:paddingRight="5dp"
+                      android:orientation="horizontal"
+                      android:id="@+id/con"
+                      android:layout_gravity="right"
+                      android:gravity="center">
+            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+                      android:id="@+id/state"
+                      android:gravity="center"
+                      android:text="@string/Approved" android:textColor="@color/white"
+                      android:textSize="18sp" android:fontFamily="@font/font_bold"
+                      android:padding="3dp"/>
+
+        </LinearLayout>
         <LinearLayout android:layout_width="match_parent"
                       android:layout_gravity="bottom"
                       android:orientation="horizontal"
@@ -36,7 +60,7 @@
                           android:textSize="18sp"
                           android:textColor="#fff"
                           android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
-                          android:id="@+id/engainPower" android:fontFamily="@font/font_bold"/>
+                          android:id="@+id/carMile" android:fontFamily="@font/font_bold"/>
             </LinearLayout>
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
@@ -57,32 +81,36 @@
     </FrameLayout>
 
     <LinearLayout android:orientation="horizontal"
+                  android:layoutDirection="ltr"
                   android:layout_width="match_parent" android:layout_height="wrap_content"
 
-                  android:background="#fff" android:paddingLeft="5dp" android:gravity="center_vertical">
-        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
+                  android:background="#fff" android:paddingLeft="5dp">
+        <ImageButton android:layout_width="40dp" android:layout_height="40dp"
                      android:src="@drawable/ic_call_black_24dp"
                      android:padding="4dp"
                      android:layout_margin="3dp"
-                     android:background="@drawable/phone" android:id="@+id/callNumberF"/>
+                     android:background="@drawable/phone" android:id="@+id/callNumber"/>
         <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:textSize="20sp" android:text="hyondai santafia 33333c"
-                  android:textAlignment="textEnd" android:padding="3dp" android:textColor="#000"
-                  android:id="@+id/carNmae" android:fontFamily="@font/font_bold"/>
+                  android:textAlignment="textEnd" android:padding="7dp" android:textColor="#000"
+                  android:id="@+id/carNmae" android:fontFamily="@font/font_bold" android:gravity="end"/>
     </LinearLayout>
-    <LinearLayout android:layout_width="match_parent"
-                  android:background="@color/white"
-                  android:layout_height="wrap_content" android:gravity="right" android:layout_margin="5dp">
-        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
-                      android:orientation="horizontal" android:background="@drawable/delete" android:padding="2dp"
-                      android:gravity="center" android:id="@+id/deleteBtn">
-            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                      android:textSize="18dp" android:textColor="@color/red" android:text="@string/Delete"
-                      android:fontFamily="@font/font_bold" android:padding="2dp"/>
-            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                       android:src="@drawable/ic_delete_black_24dp"/>
-        </LinearLayout>
-
+    <LinearLayout android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_marginRight="10dp"
+                  android:orientation="horizontal" android:background="@drawable/delete" android:padding="2dp"
+                  android:gravity="center" android:id="@+id/deleteBtn" android:layout_marginBottom="10dp">
+        <TextView android:layout_width="80dp"
+                  android:gravity="center"
+                  android:layout_height="wrap_content"
+                  android:textSize="18dp" android:textColor="@color/red" android:text="@string/Delete"
+                  android:fontFamily="@font/font_bold" android:padding="2dp"/>
+        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                   android:src="@drawable/ic_delete_black_24dp" android:layout_marginRight="4dp"/>
     </LinearLayout>
 
 </LinearLayout>
+
+
+
+
