--- a/app/src/main/res/layout/number_card.xml
+++ b/app/src/main/res/layout/number_card.xml
@@ -1,58 +1,61 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="wrap_content"
-              android:layout_height="wrap_content" android:layout_margin="10dp"
-             >
-    <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
-                 android:background="@color/white"
-                 >
+              android:layout_height="wrap_content" android:layout_margin="5dp">
+    <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
+
         <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 app:cardCornerRadius="20dp"
-
                 app:cardElevation="0dp">
 
-            <ImageView android:layout_width="165dp" android:layout_height="160dp"
+            <ImageView android:layout_width="165dp" android:layout_height="150dp"
                        android:scaleType="fitXY" android:id="@+id/numImage"
-                       android:src="@drawable/car"
+
                        android:cropToPadding="true"/>
 
         </androidx.cardview.widget.CardView>
 
-        <LinearLayout android:layout_width="wrap_content"
-                      android:background="@drawable/price_number" android:layout_height="wrap_content"
-                      android:paddingLeft="7dp"
-                      android:paddingRight="7dp"
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_gravity="bottom"
                       android:orientation="horizontal"
-                      android:layout_gravity="right"
-                      android:gravity="center">
-            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                      android:id="@+id/priceNumber"
-                      android:text="25,000" android:textColor="#000"
-                      android:textSize="18sp" android:fontFamily="@font/font_bold"/>
-            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:background="#ED646464"
+                      android:weightSum="2">
+            <LinearLayout android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:layoutDirection="ltr"
+                          android:layout_weight="1" android:gravity="center">
 
-                      android:text="$" android:textColor="#27AE60"
-                      android:textSize="20sp" android:textStyle="bold"
-                      android:fontFamily="@font/font_bold" android:gravity="center" android:layout_marginLeft="3dp"/>
+                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                          android:text="title"
+                          android:textSize="16sp"
+                          android:textColor="#fff"
+                          android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
+                          android:id="@+id/price_number" android:fontFamily="@font/font_bold"/>
+                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+
+                          android:text="$" android:textColor="#27AE60"
+                          android:textSize="20sp" android:textStyle="bold"
+                          android:fontFamily="@font/font_bold" android:gravity="center" android:layout_marginLeft="3dp"/>
+
+            </LinearLayout>
         </LinearLayout>
-
     </FrameLayout>
 
     <LinearLayout android:orientation="vertical"
-                  android:layout_width="165dp" android:layout_height="wrap_content"
+                  android:layout_width="match_parent" android:layout_height="wrap_content"
 
-                  android:background="@drawable/back_number" android:paddingLeft="5dp">
+                  android:background="@drawable/back_number">
         <LinearLayout android:layout_width="match_parent"
                       android:orientation="horizontal"
                       android:layout_height="wrap_content"
-                      android:layout_gravity="center">
+                      android:layout_gravity="center" android:layout_weight="1">
             <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                      android:textSize="18sp"
+                      android:textSize="16sp"
                       android:textColor="#000"
                       android:layout_weight="1"
                       android:id="@+id/locNumber"
@@ -65,18 +68,19 @@
         <LinearLayout android:layout_width="match_parent"
                       android:orientation="horizontal"
                       android:layout_height="wrap_content"
-                      android:layout_gravity="center">
+                      android:layout_gravity="center" android:layout_weight="1">
             <TextView android:layout_width="134dp" android:layout_height="match_parent"
-                      android:textSize="18sp"
+                      android:textSize="16sp"
                       android:textColor="#000"
                       android:gravity="right"
                       android:fontFamily="@font/font_regular"
                       android:text="phone"
                       android:layout_weight="1"
                       android:id="@+id/phoneNumber"/>
-            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+            <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
                        android:src="@drawable/ic_call_back" android:layout_margin="5dp"/>
         </LinearLayout>
+
 
     </LinearLayout>
 </LinearLayout>
