--- a/app/src/main/res/layout/profile_fragment_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment_fragment.xml
@@ -17,13 +17,11 @@
             app:lottie_loop="true"
             app:lottie_autoPlay="false"
             android:translationZ="1dp"/>
-    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
-               android:layout_gravity="right" android:src="@drawable/ic_exit_to_app_black_24dp"
-               android:layout_margin="10dp" android:id="@+id/logOut"/>
+
 
     <ScrollView android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="invisible"
+                android:visibility="visible"
     android:id="@+id/profileContainer">
 
 
@@ -45,6 +43,7 @@
                   android:paddingLeft="5dp" android:paddingRight="5dp">
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content"
+                      android:layoutDirection="ltr"
                       android:layout_marginTop="50dp" android:gravity="right">
 
             <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
@@ -63,6 +62,7 @@
         </LinearLayout>
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content"
+                      android:layoutDirection="ltr"
                       android:layout_marginTop="10dp" android:gravity="right">
 
             <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
@@ -81,6 +81,7 @@
         </LinearLayout>
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content"
+                      android:layoutDirection="ltr"
                       android:layout_marginTop="10dp" android:gravity="right">
 
             <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
@@ -99,7 +100,9 @@
         </LinearLayout>
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:layout_marginTop="10dp" android:gravity="right">
+                      android:layout_marginTop="10dp"
+                      android:layoutDirection="ltr"
+                      android:gravity="right">
 
             <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                       android:id="@+id/emailUser"
@@ -131,4 +134,8 @@
 
 </LinearLayout>
     </ScrollView>
+    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+               android:layout_gravity="right" android:src="@drawable/ic_exit_to_app_black_24dp"
+               android:layout_margin="10dp" android:id="@+id/logOut"
+               android:translationZ="1dp"/>
 </FrameLayout>
